--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--
-New Event
-http://www.templatemo.com/tm-486-new-event
--->
+
 <title>STEP - 2021</title>
 <meta name="description" content="">
 <meta name="author" content="">
@@ -335,7 +332,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img2.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text com-text">
 							<h3>Shri Ashwin C. Muthiah</h3>
 							<p>Member, Governing Council</p>
 						</div>
@@ -347,7 +344,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img3.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Shri Jawahar Vadivelu</h3>
 							<p>Member, Governing Council</p>
 						</div>
@@ -358,7 +355,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img4.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Dr. M. Sivanandham</h3>
 							<p>Secretary, SVEHT</p>
 						</div>
@@ -370,7 +367,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img5.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Shri A. Muthukumar</h3>
 							<p>Secretary, SVEHT</p>
 						</div>
@@ -384,7 +381,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img7.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-6 col-sm-6">
+						<div class="col-md-6 col-sm-6 com-text">
 							<h3>Dr.KR.Santha </h3>
 							<p>Vice Principal, Vice Principal,  </p>
 						</div>
@@ -396,7 +393,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img8.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-6 col-sm-6">
+						<div class="col-md-6 col-sm-6 com-text">
 							<h3>Dr.C.Gopinath</h3>
 							<p>Associate Professor / EEE</p>
 						</div>
@@ -408,7 +405,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img9.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-6 col-sm-6">
+						<div class="col-md-6 col-sm-6 com-text">
 							<h3>Dr.T.Annamalai  </h3>
 							<p>Assistant Professor / EEE</p>
 						</div>
@@ -420,7 +417,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img7.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Ms.S.Arulmozhi</h3>
 							<p>Assistant Professor / EEE</p>
 						</div>
@@ -432,7 +429,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img8.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Ms.N.Shanmugavadivu</h3>
 							<p>Assistant Professor / EEE</p>
 						</div>
@@ -444,7 +441,7 @@ http://www.templatemo.com/tm-486-new-event
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img9.jpg" class="img-responsive img-center" alt="program">
 						</div>
-						<div class="col-md-10 col-sm-10">
+						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Mr.D.S.Purushothaman</h3>
 							<p>Assistant Professor / EEE</p> 
 						</div>
