--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 					<div role="tabpanel" class="tab-pane active" id="fday">
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2  ">
-							<img src="images/program-img1.jpg" class="img-responsive img-center" alt="program">
+							<img src="images/program-img1.png" class="img-responsive img-center" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10 com-text">
 							<h3>Dr. A. C. Muthiah</h3>
