--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 					* Publication will be considered as per the Journal norms. &nbsp;&nbsp;(Plagiarism policy and Journal Publication charges)
 				</h5>
 
-				<h4>You can download the sample confrence paper format here.</h4>
-				<a  href="./Conference Paper Format.doc" class="btn btn-danger top-pad">DOWNLOAD NOW</a>
+				<!-- <h4>You can download the sample confrence paper format here.</h4>
+				<a  href="./Conference Paper Format.doc" class="btn btn-danger top-pad">DOWNLOAD NOW</a> -->
 				
 			</div>
 
