--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@
 								<h4>Prof. P. Karuppanan, MNNIT, Allahabad</h4>
 								<h4>Prof.. J. Kanakaraj, PSG Tech, Coimbatore</h4>
 								<h4>Prof. L Ashok Kumar, PSG Tech</h4>
+								 <h4> Dr.S.Albert Alexander, KEC, Erode</h4>
+								 <h4>Dr.C.Nagarajan, MEC, Namakkal</h4>
 								<h4>Prof. D.Ashokaraju, GCE, Salem</h4>
 								<h4>Prof. D Vydeki, VIT, Chennai</h4>
 								<h4>Prof. C Umayal, VIT, Chennai</h4>
