--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#intro" class="smoothScroll">Home</a></li>
-				<li><a href="#" class="smoothScroll">Publication</a></li>
 				<li><a href="#video" class="smoothScroll">Call For Papers</a></li>
 				<li><a href="#author" class="smoothScroll">Author Guidelines</a></li>
 				<li><a href="#program" class="smoothScroll">Commitee</a></li>
@@ -515,19 +514,37 @@
 						<div role="tabpanel" class="tab-pane" id="xday">
 							
 							<div class="col-md-10 col-sm-10 ">
-								<h4 class="com1">	Dr. J. Venkatesan, Prof. & Head / Auto			</h4>
-								<h4 class="com1">	Dr. V. Sumitha, HoD Incharge / Bio			</h4>
-								<h4 class="com1">	Dr. N. Meyyappan, Prof. & Head / Chemical			</h4>
-								<h4 class="com1">	Dr. R. Kumutha, Prof. & Head / Civil			</h4>
-								<h4 class="com1">	Dr. R. Anitha, Prof. & Head / CSE			</h4>
-								<h4 class="com1">	Dr. K. R . Santha, Vice Principal & Head / EEE			</h4>
-								<h4 class="com1">	Dr. S. Muthukumar, Prof. & Head / ECE			</h4>
-								<h4 class="com1">	Dr. V. Vidya, Prof. & Head / IT			</h4>
-								<h4 class="com1">	Prof. S. Krishnan, Prof. & Head / Marine			</h4>
-								<h4 class="com1">	Dr. R. Muthukumaraswamy, Prof. & Head / Maths			</h4>
-								<h4 class="com1">	Dr. A. Bhaskaran, Prof. & Head / Physics			</h4>
-								<h4 class="com1">	Dr. G. Devasagayam, Prof. & Head / Chemistry			</h4>
-								<h4 class="com1">	Dr. T. Murugavel, Prof. & Head / HSS			</h4>
+								<h4 class = "com1">	Ms.M.Sasikala, AP/EE	</h4>
+								<h4 class = "com1">	Mr.V.Mohanraj, AP/EE	</h4>
+								<h4 class = "com1">	Dr.R.Sathia AP/CVE	</h4>
+								<h4 class = "com1">	Mr.S.Kumaravel, AP/EE	</h4>
+								<h4 class = "com1">	Mr.G.Vinoth kumar, AP/EE	</h4>
+								<h4 class = "com1">	Ms.R.Rajeswari,AP/ECE	</h4>
+								<h4 class = "com1">	Mr.C.Venkatesan, AP/EE	</h4>
+								<h4 class = "com1">	Dr.M.Sankar, AP/EE	</h4>
+								<h4 class = "com1">	Ms.P.Vinothiyalakshmi,AP/CSE	</h4>
+								<h4 class = "com1">	Ms.K.Suganthi, AP/EE	</h4>
+								<h4 class = "com1">	Ms.M.Rajalakshmi, AP/EE	</h4>
+								<h4 class = "com1">	Ms.V.M.Sivagami,ASP/INT	</h4>
+								<h4 class = "com1">	Mr.S.Sudharsanam, AP/EE	</h4>
+								<h4 class = "com1">	Mr.C.Kamal, AP/EE	</h4>
+								<h4 class = "com1">	Dr.P.K.Praveen Kumar,ASP/BIO	</h4>
+								<h4 class = "com1">	Mr.S.S.Sethuraman, AP/EE	</h4>
+								<h4 class = "com1">	Mr.S.Thamizmani, AP/EE	</h4>
+								<h4 class = "com1">	Dr.R.Govindarasu,ASP/CHE	</h4>
+								<h4 class = "com1">	Ms.D.Amudhavalli, AP/EE	</h4>
+								<h4 class = "com1">	Ms.M.Maadhuri, AP/EE	</h4>
+								<h4 class = "com1">	Dr.M.Anandan,ASP/MAR	</h4>
+								<h4 class = "com1">	Mr.M.Ranjithkumar, AP/EE	</h4>
+								<h4 class = "com1">	Dr.R.Kannadasan, AP/EE	</h4>
+								<h4 class = "com1">	Dr.N.Nachiappan,AP/ACH	</h4>
+								<h4 class = "com1">	Ms.S.Anitha, AP/EE	</h4>
+								<h4 class = "com1">	Dr.V.Ganesh,ASP/AUTO	</h4>
+								<h4 class = "com1">	Dr.S.SampathKrishnan,Prof/ACH	</h4>
+								<h4 class = "com1">	Ms.S.Sinthamani, AP/EE	</h4>
+								<h4 class = "com1">	Dr.M.Mohandass,ASP/MECH	</h4>
+								<h4 class = "com1">	Dr.Amutha Charu Sheela,AP/HSS	</h4>
+								<h4 class = "com1">	Ms.K.S.Pavithra, AP/EE	</h4>
 								
 							</div>
 
