--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<li><a href="#jp" class="smoothScroll">Journal Publication</a></li>
 				<li><a href="#program" class="smoothScroll">Committee</a></li>
 				<li><a href="#venue" class="smoothScroll">About us</a></li>
-				<li><a href="#headingOne" class="smoothScroll">Contact</a></li>
+				<li><a href="#contact_1" class="smoothScroll">Contact</a></li>
 			</ul>
 			<a href="#intro" class="navbar-brand"> <img class="logo" src="./images/Aicte_logo-svce.png" alt="" > </a>
 		</div>
@@ -747,6 +747,31 @@
 	</div>
 </section>
 
+
+<section id="contact_1">
+	<section id="video" class="parallax-section authorguide">
+		<div class="container" >
+			<div class="row">
+	
+				<div class="wow fadeInUp col-md-10 col-sm-10" data-wow-delay="0.9s">
+					<h2>Address for Communication</h2>
+					<div class="panel-body addresstext">
+						<h3> Coordinator, STEP- 2021,</h3>
+						<h3>EEE Department,</h3>
+						<h3>Sri Venkateswara College of Engineering, </h3>
+						<h3>Pennalur, Sriperumbudur - 602117 </h3>
+						<h3>Phone No: 044-27152000, Extn-251,264 </h3>
+						<h3>Cell No: 9790889777, 7598121751, 
+							7871422330, 9865861067, 9789452512</h3>
+						<h3>E-mail:  step2021@svce.ac.in</h3>
+					</div>
+					
+				</div>
+	
+			</div>
+		</div>
+	</section>
+</section>
 
 
 
