--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 						
 						<div class="col-md-10 col-sm-10 com-text co-text">
 							<h3>Dr.KR.Santha </h3>
-							<p>Vice Principal  </p>
+							<p>Vice Principal, Professor and Head Of EEE</p>
 						</div>
 					
 						<div class="col-md-10 col-sm-10 com-text co-text">
