--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<li><a href="#venue" class="smoothScroll">About us</a></li>
 				<li><a href="#contact_1" class="smoothScroll">Contact</a></li>
 			</ul>
-			<a href="#intro" class="navbar-brand"> <img class="logo" src="./images/Aicte_logo-svce.png" alt="" > </a>
+			<a href="#intro" class="navbar-brand"> <img class="logo logo-1" src="./images/Aicte_logo-svce.png" alt="" > </a>
 		</div>
 		
 	</div>
