--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@
 			<div class="row">
 	
 				<div class="wow fadeInUp col-md-10 col-sm-10" data-wow-delay="0.9s">
-					<h2>Address for Communication</h2>
-					<div class="panel-body addresstext">
+					<h2 class="addresstext1">Address for Communication</h2>
+					<div class="panel-body addresstext ">
 						<h3> Coordinator, STEP- 2021,</h3>
 						<h3>EEE Department,</h3>
 						<h3>Sri Venkateswara College of Engineering, </h3>
